; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sparse_array_test.c_leaf_check_all.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sparse_array_test.c_leaf_check_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.doall_st = type { i32, i64, i64, %struct.index_cases_st* }
%struct.index_cases_st = type { i64, i32, i32 }

@.str = private unnamed_addr constant [34 x i8] c"Index %ju with value %s not found\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*, i8*)* @leaf_check_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @leaf_check_all(i64 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.doall_st*, align 8
  %8 = alloca %struct.index_cases_st*, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.doall_st*
  store %struct.doall_st* %11, %struct.doall_st** %7, align 8
  %12 = load %struct.doall_st*, %struct.doall_st** %7, align 8
  %13 = getelementptr inbounds %struct.doall_st, %struct.doall_st* %12, i32 0, i32 3
  %14 = load %struct.index_cases_st*, %struct.index_cases_st** %13, align 8
  store %struct.index_cases_st* %14, %struct.index_cases_st** %8, align 8
  %15 = load %struct.doall_st*, %struct.doall_st** %7, align 8
  %16 = getelementptr inbounds %struct.doall_st, %struct.doall_st* %15, i32 0, i32 0
  store i32 0, i32* %16, align 8
  store i64 0, i64* %9, align 8
  br label %17

17:                                               ; preds = %56, %3
  %18 = load i64, i64* %9, align 8
  %19 = load %struct.doall_st*, %struct.doall_st** %7, align 8
  %20 = getelementptr inbounds %struct.doall_st, %struct.doall_st* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ult i64 %18, %21
  br i1 %22, label %23, label %59

23:                                               ; preds = %17
  %24 = load %struct.doall_st*, %struct.doall_st** %7, align 8
  %25 = getelementptr inbounds %struct.doall_st, %struct.doall_st* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %35, label %28

28:                                               ; preds = %23
  %29 = load %struct.index_cases_st*, %struct.index_cases_st** %8, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %29, i64 %30
  %32 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %55, label %35

35:                                               ; preds = %28, %23
  %36 = load i64, i64* %4, align 8
  %37 = load %struct.index_cases_st*, %struct.index_cases_st** %8, align 8
  %38 = load i64, i64* %9, align 8
  %39 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %37, i64 %38
  %40 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = icmp eq i64 %36, %41
  br i1 %42, label %43, label %55

43:                                               ; preds = %35
  %44 = load i8*, i8** %5, align 8
  %45 = load %struct.index_cases_st*, %struct.index_cases_st** %8, align 8
  %46 = load i64, i64* %9, align 8
  %47 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %45, i64 %46
  %48 = getelementptr inbounds %struct.index_cases_st, %struct.index_cases_st* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 8
  %50 = call i64 @strcmp(i8* %44, i32 %49)
  %51 = icmp eq i64 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %43
  %53 = load %struct.doall_st*, %struct.doall_st** %7, align 8
  %54 = getelementptr inbounds %struct.doall_st, %struct.doall_st* %53, i32 0, i32 0
  store i32 1, i32* %54, align 8
  br label %63

55:                                               ; preds = %43, %35, %28
  br label %56

56:                                               ; preds = %55
  %57 = load i64, i64* %9, align 8
  %58 = add i64 %57, 1
  store i64 %58, i64* %9, align 8
  br label %17

59:                                               ; preds = %17
  %60 = load i64, i64* %4, align 8
  %61 = load i8*, i8** %5, align 8
  %62 = call i32 @TEST_error(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %60, i8* %61)
  br label %63

63:                                               ; preds = %59, %52
  ret void
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @TEST_error(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
